--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Mini Uber</string>
+    <string name="Uber">Uber</string>
+    <string name="get_there">Get There</string>
+    <string name="please_choose">Please Choose</string>
+    <string name="rider">Rider</string>
+    <string name="driver">Driver</string>
 </resources>
