Maps Directions (Billing Account is a Must)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="rider">Rider</string>
     <string name="driver">Driver</string>
     <string name="title_activity_maps">MapsActivity</string>
+  <string name="maps_key">AIzaSyCwSNYh_1b4tVKBJzjQ-pKRiSuWVlF6MXA"</string>
     <string name="style_json_dark">
   [
     {
